TEST_PROGRAMS/INVALID/jacob_errington/end-done.min
while x do
    # something important
endif
# mixed up endif and done

